# django-auth-style

./: .editorconfig  .git-blame-ignore-revs  .gitignore  DEVELOPMENT.md  MANIFEST.in  Procfile  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  setup.py  tailwind.config.js  tailwind.config.ts  tox.ini
.github/: renovate.json5
.github/workflows/: ci.yml  generate-snapshots.yml  release.yml
auth_style/: __init__.py  apps.py
auth_style/templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
auth_style/templates/account/snippets/: already_logged_in.html  menu_item.html
auth_style/templates/allauth/elements/: alert.html  badge.html  button.html  button_group.html  details.html  field.html  fields.html  form.html  h1.html  h2.html  hr.html  img.html  p.html  panel.html  provider.html  provider_list.html  table.html
auth_style/templates/allauth/layouts/: base.html
auth_style/templates/auth_style/: base.html  site_name.html
auth_style/templates/socialaccount/snippets/: provider_list.html
dev/: .env.docker-compose  .env.docker-compose-native  django.Dockerfile  manage.py  requirements.txt  settings.py  tailwind.Dockerfile  urls.py  wsgi.py
dev/auth_style_design/: apps.py  views.py
dev/auth_style_design/migrations/: 0001_default_site.py  0002_default_allauth.py  0003_default_oauth_application.py
dev/auth_style_design/templates/auth_style_design/: auth_template_listing.html
dev/girder_style_design/: apps.py  views.py
dev/girder_style_design/migrations/: 0001_default_site.py
girder_auth_design/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
girder_auth_design/core/: apps.py  views.py
girder_auth_design/core/migrations/: 0001_default_site.py
girder_auth_design/core/templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
girder_auth_design/core/templates/account/snippets/: already_logged_in.html  message_item.html  sub_menu_item.html
girder_auth_design/core/templates/girder_auth_design/: auth_template_listing.html
girder_auth_design/core/templates/socialaccount/snippets/: provider_list.html
girder_auth_design/theme/: apps.py
girder_auth_design/theme/static_src/: README.md  tailwind.config.js
girder_auth_design/theme/static_src/src/: styles.scss
girder_style/: __init__.py  apps.py
girder_style/templates/: base.html
girder_style/templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_from_key.html  password_set.html  signup.html  verified_email_required.html
girder_style/templates/account/snippets/: menu_item.html  message_item.html  sub_menu_item.html
girder_style/templates/girder_style/: base.html
girder_style/templates/socialaccount/snippets/: provider_list.html
npm-src/: icons.css  styles.pcss
tailwind/: README.md  package.json  tailwind.config.js
tailwind/src/: icons.css  styles.scss
tests/: conftest.py  test_render.py  test_site.py  test_template.py
tests/test_app/: settings.py  urls.py  views.py
tests/test_app/templates/auth_style/: extra_head.html
tests/test_override_app/auth_style_design/: apps.py
tests/test_override_app/auth_style_design/templates/auth_style/: extra_head.html  site_name.html
