[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-auth-style"
description = "Django template styling for django-allauth and django-oauth-toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache 2.0"}
maintainers = [{name = "Kitware, Inc.", email = "kitware@kitware.com"}]
keywords=[
  "django",
  "resonant",
  "kitware-resonant",
  "style",
  "styling",
  "allauth",
  "django-allauth",
  "django-oauth-toolkit"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django :: 3",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
]
dependencies = [
  "django>=3.2",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/kitware-resonant/django-auth-style"
"Bug Reports" = "https://github.com/kitware-resonant/django-auth-style/issues"

[project.optional-dependencies]
allauth = [
  "django-allauth",
]
oauth-toolkit = [
  "django-oauth-toolkit",
]

[tool.hatch.build]
only-include = [
  "auth_style",
]
artifacts = [
  "auth_style/static/auth_style/dist",
]


[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true
