[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-auth-style"
description = "Django template styling for django-allauth and django-oauth-toolkit."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
maintainers = [{ name = "Kitware, Inc.", email = "kitware@kitware.com" }]
keywords = [
  "django",
  "resonant",
  "kitware-resonant",
  "style",
  "styling",
  "allauth",
  "django-allauth",
  "django-oauth-toolkit"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "django>=5.2",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/kitware-resonant/django-auth-style"
"Bug Reports" = "https://github.com/kitware-resonant/django-auth-style/issues"

[project.optional-dependencies]
allauth = [
  # Required for "elements/p.html" template
  "django-allauth>=0.63",
]
oauth-toolkit = [
  "django-oauth-toolkit",
]

[dependency-groups]
dev = [
  "django",
  "django-allauth[mfa,socialaccount]",
  "django-browser-reload",
  "django-debug-toolbar",
  "django-extensions",
  "django-oauth-toolkit",
  "ipython",
  "tox",
  "tox-uv",
  "watchdog",
  "werkzeug",
]
lint = [
  "ruff",
]
type = [
  "mypy",
  "django-stubs[compatible-mypy]",
]
test = [
  "django-allauth[mfa,socialaccount]",
  "django-coverage-plugin",
  "freezegun",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-mock",
  "pytest-playwright",
  "pytest-playwright-visual",
]

[tool.hatch.build]
only-include = [
  "auth_style",
]
artifacts = [
  "auth_style/static/auth_style/dist",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "auth_style/static/auth_style/dist/styles.css",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build"
source_dir = "npm-src"
build_dir = "auth_style/static/auth_style/dist"

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Incompatible with formatter
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
  "D206", # docstring-tab-indentation
  "D300", # triple-single-quotes
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  "ISC001", # single-line-implicit-string-concatenation
  "ISC002", # multi-line-implicit-string-concatenation
  "Q", # flake8-quotes
  "W191", # tab-indentation

  # Incompatible with Django
  "A003", # builtin-attribute-shadowing
  "ARG001", # unused-function-argument
  "ARG002", # unused-method-argument
  "RUF012", # mutable-class-default

  # Overly burdensome
  "ANN", # flake8-annotations
  "D1", # undocumented-*
  "EM101", # raw-string-in-exception
  "ERA001", # commented-out-code
  "FIX", # flake8-fixme
  "RET506", # superfluous-else-raise
  "TD002", # missing-todo-author
  "TD003", # missing-todo-link
  "TRY003", # raise-vanilla-args

  # Project-specific
]

[tool.ruff.lint.per-file-ignores]
"dev/**" = [
  "INP001", # implicit-namespace-package
]
"**/migrations/**" = [
  "N806", # non-lowercase-variable-in-function
  "RUF012", # mutable-class-default
]
"**/settings.py" = [
  "S105", # hardcoded-password-string
]
"**/tests/**" = [
  "DJ007", # django-all-with-model-form
  "DJ008", # django-model-without-dunder-str
  "INP001", # implicit-namespace-package
  "PLR0913", # too-many-arguments
  "PLR2004", # magic-value-comparison
  "S", # flake8-bandit
  "SLF001", # private-member-access
]

[tool.ruff.lint.flake8-self]
extend-ignore-names = ["_base_manager", "_default_manager",  "_meta"]

[tool.ruff.lint.isort]
# Sort by name, don't cluster "from" vs "import"
force-sort-within-sections = true
# Deferred annotations allows TC* rules to move more imports into TYPE_CHECKING blocks
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = [
  "auth_style",
  "tests",
]
check_untyped_defs = true
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = [
  "mypy_django_plugin.main",
]
mypy_path = [
  # Use the same pythonpath for MyPy as for Pytest
  "tests",
]

[[tool.mypy.overrides]]
module = [
  "allauth.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "test_app.settings"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Allow test_app to be imported without adding the root directory to the pythonpath,
# which would cause the local "auth_style" module to shadow the install.
pythonpath = ["tests"]
# Configure pythonpath ourselves, not based on manage.py
django_find_project = false
addopts = [
  # Use the Pytest-reccomended "importlib" mode
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  "--showlocals",
  "--verbose",
  "--cov",
]
filterwarnings = [
  "error",
  # pytest often causes unclosed socket warnings
  'ignore:unclosed <socket\.socket:ResourceWarning',
  # https://github.com/whtsky/pixelmatch-py/issues/170
  "ignore:Image.Image.getdata is deprecated:DeprecationWarning:pixelmatch.contrib.PIL",
]
DJANGO_SETTINGS_MODULE = "test_app.settings"

[tool.coverage.run]
source_pkgs = [
  "auth_style",
  # django_coverage_plugin hooks into "django.template" to do its work; since we're only
  # whitelisting select packages for coverage tracking, this must be among them
  "django.template",
]
plugins = [
  "django_coverage_plugin",
]

[tool.coverage.report]
omit = [
  # Don't actually report coverage from "django.template" itself
  "**/site-packages/django/template/**",
]

[tool.coverage.paths]
source = [
  "auth_style/",
  ".tox/**/site-packages/auth_style/",
]
